@@ -155,6 +155,7 @@ PUBLIC DECLARE SUB      BLIT FREE       (BYVAL blit AS VOID PTR)
 PUBLIC DECLARE SUB      GET             (_COORD2(BYVAL s1 AS BOOLEAN=FALSE, BYVAL x1 AS INTEGER=-1, BYVAL y1 AS INTEGER=-1, BYVAL s2 AS BOOLEAN=FALSE, BYVAL x2 AS INTEGER=-1, BYVAL y2 AS INTEGER=-1), BYVAL blit AS VOID PTR)
 PUBLIC DECLARE SUB      PUT             (_COORD(BYVAL s AS BOOLEAN=FALSE, BYVAL x AS INTEGER=-1, BYVAL y AS INTEGER=-1), BYVAL blit AS VOID PTR, BYVAL minterm AS UBYTE=&HC0, _
                                          _COORD2(BYVAL s1 AS BOOLEAN=FALSE, BYVAL x1 AS INTEGER=-1, BYVAL y1 AS INTEGER=-1, BYVAL s2 AS BOOLEAN=FALSE, BYVAL x2 AS INTEGER=-1, BYVAL y2 AS INTEGER=-1))
+PUBLIC DECLARE SUB      PALETTE LOAD    (BYVAL p AS PALETTE_t PTR)
 
 PUBLIC DECLARE FUNCTION INKEY$          ()
 
