@@ -8,6 +8,7 @@ Improvements::
     * runtime: GET instruction added
     * runtime: PUT instruction added
     * runtime: ALLOCATE, DEALLOCATE, _MEMSET added
+    * runtime: PALETTE LOAD instruction added
     * compiler: add generic #fno syntax
 
 Bug Fixes::
